--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-vue": "^10.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "sass-embedded": "^1.90.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite": "^7.0.5",
