--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@parcel/watcher",
       "electron",
       "esbuild",
       "vue-demi"
