--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@icon-park/vue-next": "^1.4.2",
+    "clipboard": "^2.0.11",
     "element-plus": "^2.11.1",
-    "vue-router": "^4.5.1"
+    "jsonrepair": "^3.13.0",
+    "vue-router": "^4.5.1",
+    "vue3-json-viewer": "^2.4.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
