--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clipboard": "^2.0.11",
     "element-plus": "^2.11.1",
     "jsonrepair": "^3.13.0",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "vue-router": "^4.5.1",
     "vue3-json-viewer": "^2.4.1"
   },
