--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonrepair": "^3.13.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "sm-crypto-v2": "^1.13.0",
     "vue-router": "^4.5.1",
     "vue3-json-viewer": "^2.4.1"
   },
