完善JsonTool页面样式及app描述

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tk-tools",
   "version": "1.0.0",
-  "description": "An Electron application with Vue and TypeScript",
+  "description": "测试常用工具箱",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
