--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@icon-park/vue-next": "^1.4.2",
@@ -31,6 +33,7 @@
     "pinia-plugin-persistedstate": "^4.5.0",
     "sm-crypto-v2": "^1.13.0",
     "uuid": "^11.1.0",
+    "vue-codemirror6": "^1.3.22",
     "vue-router": "^4.5.1",
     "vue3-json-viewer": "^2.4.1"
   },
