--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "sm-crypto-v2": "^1.13.0",
     "uuid": "^11.1.0",
     "vue-codemirror6": "^1.3.22",
-    "vue-router": "^4.5.1",
-    "vue3-json-viewer": "^2.4.1"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
