修改打包配置，win平台添加单文件打包配置

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,9 +9,15 @@ files:
   - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
+asar: true
 asarUnpack:
   - resources/**
 win:
+  target:
+    - target: nsis
+      arch: x64
+    - target: portable
+      arch: x64
   executableName: tk-tools
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
