--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@icon-park/vue-next": "^1.4.2",
+    "@vueuse/core": "^13.9.0",
     "clipboard": "^2.0.11",
+    "electron-store": "^10.1.0",
     "element-plus": "^2.11.1",
     "jsonrepair": "^3.13.0",
     "pinia": "^3.0.3",
