--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@icon-park/vue-next": "^1.4.2",
     "@vueuse/core": "^13.9.0",
     "clipboard": "^2.0.11",
+    "dayjs": "^1.11.18",
     "electron-store": "^10.1.0",
     "element-plus": "^2.11.1",
     "jsonrepair": "^3.13.0",
