--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tk-tools",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "测试常用工具箱",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -22,14 +22,17 @@
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
-    "@codemirror/view": "^6.38.2",
+    "@codemirror/view": "6.0.2",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@icon-park/vue-next": "^1.4.2",
     "@vueuse/core": "^13.9.0",
     "clipboard": "^2.0.11",
+    "codemirror": "^6.0.2",
     "dayjs": "^1.11.18",
+    "diff-match-patch": "^1.0.5",
     "electron-store": "^10.1.0",
     "element-plus": "^2.11.1",
     "jsonrepair": "^3.13.0",
@@ -44,6 +47,7 @@
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@types/diff-match-patch": "^1.0.36",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.0",
     "autoprefixer": "^10.4.21",
