--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tk-tools",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "测试常用工具箱",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/merge": "^6.10.2",
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.3",
